--- a/UTS.WPF/UTS.WPF.csproj
+++ b/UTS.WPF/UTS.WPF.csproj
@@ -6,7 +6,17 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>app.ico</ApplicationIcon>
+    <SignAssembly>False</SignAssembly>
+    <StartupObject>UTS.WPF.App</StartupObject>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="..\LICENSE.txt" Link="LICENSE.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="app.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\UTS.Backend\UTS.Backend.csproj" />
